@@ -147,6 +147,7 @@ The structure of the rule file
 ==============================
 By default this plugin generates rules in the form `if ... elsif` if you would rather each rule was a separate if statement then add $rcmail_config['sieverules_use_elsif'] = false to your config. You may also want to change the text for $messages['sieveruleexp'] in your localisation. This is displayed at the top of the filter rules fieldset.
 By default this plugin uses \r\n to seperate lines (RFC 5228) if you want to use \n instead then set define('RCUBE_SIEVE_NEWLINE', "\n"); in your config. Add define('RCUBE_SIEVE_INDENT', "\t"); to change the tab character.
+By default this plugin places a simple comment at the top of the rule file to show it was generated by the plugin. This header can be overridden by setting define('RCUBE_SIEVE_HEADER', "## Generated by RoundCube Webmail SieveRules Plugin ##"); in your config.
 
 :addresses line in vaction messages
 ===================================
