@@ -43,6 +43,9 @@ if (!defined('RCUBE_SIEVE_NEWLINE'))
 if (!defined('RCUBE_SIEVE_INDENT'))
 	define('RCUBE_SIEVE_INDENT', "\t");
 
+if (!defined('RCUBE_SIEVE_HEADER'))
+	define('RCUBE_SIEVE_HEADER', "## Generated by RoundCube Webmail SieveRules Plugin ##");
+
 class rcube_sieve_script {
 	private $elsif = true;
 	private $content = array();
@@ -199,7 +202,7 @@ class rcube_sieve_script {
 							$tests[$i] .= ($test['not'] ? 'not ' : '');
 							$tests[$i] .= 'spamtest :value ' . ($test['operator'] == 'eq' ? '"eq" ' :
 									($test['operator'] == 'le' ? '"le" ' : '"ge" ')) .
-									':comparator "i;ascii-numeric" "' .  $test['target'] .'"';
+									':comparator "i;ascii-numeric" "' . $test['target'] .'"';
 							break;
 						case 'true':
 							$tests[$i] .= ($test['not'] ? 'not true' : 'true');
@@ -419,8 +422,8 @@ class rcube_sieve_script {
 			$script = 'require ["' . implode('","', $exts) . "\"];" . RCUBE_SIEVE_NEWLINE . RCUBE_SIEVE_NEWLINE . $variables . $script;
 
 		// author
-		if ($script)
-			$script = "## Generated by RoundCube Webmail SieveRules Plugin ##".  RCUBE_SIEVE_NEWLINE . $script;
+		if ($script && RCUBE_SIEVE_HEADER)
+			$script = RCUBE_SIEVE_HEADER . RCUBE_SIEVE_NEWLINE . $script;
 
 		return $script;
 	}
